--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,11 +1,13 @@
 server {
-    listen 8080;
+    listen ${LISTEN_PORT};
 
-    location /static{
+    location /static {
         alias /vol/static;
     }
-    location /{
-        uwsgi_pass auth:8000;
-        include /etc/nginx/uwsgi_params;
+
+    location / {
+        uwsgi_pass              ${APP_HOST}:${APP_PORT};
+        include                 /etc/nginx/uwsgi_params;
+        client_max_body_size    10M;
     }
 }
