--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,12 +1,12 @@
 server {
-    listen ${LISTEN_PORT};
+    listen 8000;
 
     location /static {
         alias /vol/static;
     }
 
     location / {
-        uwsgi_pass              ${APP_HOST}:${APP_PORT};
+        uwsgi_pass              auth:9000;
         include                 /etc/nginx/uwsgi_params;
         client_max_body_size    10M;
     }
